crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@let__int.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/let/int.panda
---
Ok(
    Let(
        Let {
            name: "x",
            value: Int(
                Int {
                    n: 3,
                },
            ),
            body: Var(
                Var {
                    name: "x",
                },
            ),
            rec: false,
        },
    ),
)
