crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@let__nested_body.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/let/nested_body.panda
---
Ok(
    Let(
        Let {
            name: "x",
            value: Int(
                Int {
                    n: 1,
                },
            ),
            body: Let(
                Let {
                    name: "y",
                    value: Int(
                        Int {
                            n: 1,
                        },
                    ),
                    body: Var(
                        Var {
                            name: "x",
                        },
                    ),
                },
            ),
        },
    ),
)
