crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@let__nested_value.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/let/nested_value.panda
---
Ok(
    Let(
        Let {
            name: "x",
            value: Let(
                Let {
                    name: "y",
                    value: Int(
                        Int {
                            n: 1,
                        },
                    ),
                    body: Var(
                        Var {
                            name: "y",
                        },
                    ),
                },
            ),
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
    ),
)
