crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@let__shorthand_lambda.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/let/shorthand_lambda.panda
---
Ok(
    Let(
        Let {
            name: "id",
            value: Fun(
                Fun {
                    arg: "x",
                    body: Var(
                        Var {
                            name: "x",
                        },
                    ),
                },
            ),
            body: Var(
                Var {
                    name: "id",
                },
            ),
            rec: false,
        },
    ),
)
