crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@let__str.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/let/str.panda
---
Ok(
    Let(
        Let {
            name: "x",
            value: Str(
                Str {
                    s: "foo",
                },
            ),
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
    ),
)
